Fixed Y axis spacing
"Show all" doesn't replace first filter option
Number of ships displayed under the filter button

--- a/css/style.scss
+++ b/css/style.scss
@@ -193,9 +193,9 @@ table, th, td {
   color: #333;
 }
 
-.x text {
-	display: none;
-}
+//.x text {
+//	display: none;
+//}
 
 .x {
 	pointer-events: none;
@@ -249,13 +249,18 @@ div.annotation {
 	display: none;
 }
 
+#ships-shown {
+	margin:6px 0;
+	color:#666;
+}
+
 select {
 	border: 1px solid #333;
 	background: #eee;
 	width: 100%;
 	padding: 6px 8px;
 	font-family: $mono;
-	margin-bottom: 10px;
+	margin: 4px 0 10px;
 	
 	option {
 		padding: 6px 8px;
@@ -270,7 +275,7 @@ select:focus {
 input[type="button"] {
 	font-family: $mono;
 	text-transform: uppercase;
-	margin-bottom: 6px;
+	margin: 6px 0;
 	padding: 6px 12px; 
 	background:#eee; 
 	border: 1px solid #333;
